# sophos-cli

./: .gitignore  AGENTS.md  Justfile  README.md  minecraft.json  pyproject.toml  pyrightconfig.json
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/coding-agent/: README.md  support_matrix.md
docs/coding-agent/domains/dns/: dns_host_entry.md
docs/coding-agent/domains/network/: fqdn_host.md  fqdn_host_group.md  ip_host.md  ip_host_group.md  ip_network.md  ip_range.md
docs/coding-agent/templates/: domain_resource_template.md
src/sophos_cli/: __init__.py  __main__.py  cli.py  command_support.py  config.py  connection.py  firewall_client.py  sdk.py
src/sophos_cli/commands/: admin.py  api.py  dns.py  firewall.py  network.py  raw.py  service.py  system.py  user.py  webfilter.py  zone.py
src/sophos_cli/io/: __init__.py  bulk_input.py
src/sophos_cli/models/: __init__.py  dns.py  network.py  service.py
src/sophos_cli/services/: __init__.py  admin_service.py  dns_service.py  firewall_service.py  network_service.py  service_service.py  system_service.py  user_service.py  webfilter_service.py  zone_service.py
tests/: conftest.py  test_bulk_input.py  test_cli.py  test_cli_runtime.py  test_dns_service.py  test_e2e_cli.py
