[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sophos-cli"
version = "0.1.0"
description = "Command-line tooling for Sophos Firewall automation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.12.0",
    "rich>=14.3.2",
    "sophosfirewall-python>=0.1.66",
    "typer>=0.23.0",
]

[project.scripts]
sophos-cli = "sophos_cli.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sophos_cli"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/sophos_cli/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
