[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sophos-cli"
dynamic = ["version"]
description = "Command-line tooling for Sophos Firewall automation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mathias" }]
keywords = ["sophos", "firewall", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-settings>=2.12.0",
    "rich>=14.3.2",
    "sophosfirewall-python>=0.1.66",
    "typer>=0.23.0",
]

[project.scripts]
sophos-cli = "sophos_cli.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.1",
    "pyright>=1.1.408",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sophos_cli"]

[tool.hatch.version]
path = "src/sophos_cli/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sophos_cli"]

[tool.ruff.lint.per-file-ignores]
"src/sophos_cli/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
